[package]
name = "maven-toolbox"
description = "A collection of Maven-related utilities."
version = "0.0.1"
authors = ["Ivan Bodrov <ibodrov@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/concord-workflow/maven-toolbox-rs"
readme = "README.md"

[features]
default-impl = ["ureq", "roxmltree"]
default = ["default-impl"]

[dependencies]
log = "0.4.11"
ureq = { optional = true, version = "2.0.0", default-features = false, features = ["tls"] }
roxmltree = { optional = true, version = "0.14.0" }

[dev-dependencies]
env_logger = "0.8.2"
